test/resolver/fail/resolve_import_undefined.ms
import { baz } from "module_lib";
val x := baz;
